# datamesh-api/Data/Dto/DataDomainDto.cs
@@ -7,8 +7,9 @@ namespace Datamesh.Data.Dto
         public string Name { get; set; }
         public string Key { get; set; }
         public string NameAbbreviationShort { get; set; }
-        public string NameAbbrevationLong { get; set; }
+        public string NameAbbreviationLong { get; set; }
         public string SubscriptionName { get; set; }
         public Guid SubscriptionId { get; set; }
+        public string DevOpsProjectName { get; set; }
     }
 }
